--- a/.eslintrc.yaml
+++ b/.eslintrc.yaml
@@ -39,9 +39,7 @@ overrides:
             - sibling
             - object
             - type
-      '@typescript-eslint/consistent-type-imports':
-        - error
-        - fixStyle: separate-type-imports
+      '@typescript-eslint/consistent-type-imports': error
       '@typescript-eslint/member-ordering': error
       '@typescript-eslint/explicit-member-accessibility': error
 parserOptions:
