chore: add eslint rule

--- a/.eslintrc.yaml
+++ b/.eslintrc.yaml
@@ -39,6 +39,7 @@ overrides:
             - sibling
             - object
             - type
+      max-params: error
       '@typescript-eslint/consistent-type-imports': error
       '@typescript-eslint/member-ordering': error
       '@typescript-eslint/explicit-member-accessibility': error
