--- a/extensions/exposition/schemas/node.cos.yaml
+++ b/extensions/exposition/schemas/node.cos.yaml
@@ -3,7 +3,7 @@
 
 # methods
 /^(GET|POST|PUT|PATCH|DELETE)$/:
-  operation*: string
+  endpoint*: string
   type*: [transition, observation, assignment, computation, effect]
   query: object
 
