feat(exposition): add merging

--- a/extensions/exposition/schemas/node.cos.yaml
+++ b/extensions/exposition/schemas/node.cos.yaml
@@ -3,6 +3,8 @@
 
 # methods
 /^(GET|POST|PUT|PATCH|DELETE)$/:
+  namespace: default
+  component*: string
   endpoint*: string
   type*: [transition, observation, assignment, computation, effect]
   query: object
