--- a/extensions/exposition/package.json
+++ b/extensions/exposition/package.json
@@ -17,6 +17,8 @@
     "access": "public"
   },
   "dependencies": {
+    "@toa.io/boot": "0.20.0-dev.16",
+    "@toa.io/core": "0.20.0-dev.16",
     "@toa.io/generic": "0.20.0-dev.16",
     "@types/cors": "2.8.13",
     "@types/express": "4.17.17",
