style: add max-len eslint rule

--- a/.eslintrc.yaml
+++ b/.eslintrc.yaml
@@ -18,6 +18,9 @@ overrides:
       function-paren-newline:
         - error
         - never
+      max-len:
+        - error
+        - 100
       max-depth: [error, 2]
       max-statements-per-line:
         - error
