--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@types/node": "18.0.0",
     "@types/randomstring": "1.1.8",
     "clone-deep": "4.0.1",
+    "cucumber-tsflow": "4.0.6",
     "dotenv": "16.0.3",
     "eslint-config-standard-with-typescript": "35.0.0",
     "execa": "5.1.1",
@@ -92,7 +93,7 @@
       "**/(*.)+(test).(js|ts)"
     ],
     "testPathIgnorePatterns": [
-      ".*\/transpiled\/"
+      ".*/transpiled/"
     ],
     "bail": true
   }
