--- a/package.json
+++ b/package.json
@@ -74,7 +74,8 @@
     "cluster": "chmod +x ./integration/scripts/cluster.sh && ./integration/scripts/cluster.sh",
     "buildx": "docker buildx create --name toa --use && docker buildx inspect --bootstrap",
     "setup": "docker compose up -d && npm run cluster && npm run buildx && npm run publish:local && npm ci && toa deploy ./integration/context",
-    "ci": "npm exec --workspaces -c \"rm -rf node_modules\" && npm i"
+    "ci": "npm exec --workspaces -c \"rm -rf node_modules\" && npm i && npm run transpile",
+    "transpile": "npm run transpile --workspaces --if-present"
   },
   "jest": {
     "preset": "ts-jest",
