--- a/extensions/exposition/package.json
+++ b/extensions/exposition/package.json
@@ -22,7 +22,9 @@
     "@types/cors": "2.8.13",
     "@types/express": "4.17.17",
     "cors": "2.8.5",
-    "express": "4.18.2"
+    "express": "4.18.2",
+    "js-yaml": "4.1.0",
+    "msgpackr": "1.9.5"
   },
   "jest": {
     "preset": "ts-jest",
