feat(exposition): add content negotiation

--- a/extensions/exposition/package.json
+++ b/extensions/exposition/package.json
@@ -24,7 +24,8 @@
     "cors": "2.8.5",
     "express": "4.18.2",
     "js-yaml": "4.1.0",
-    "msgpackr": "1.9.5"
+    "msgpackr": "1.9.5",
+    "negotiator": "0.6.3"
   },
   "jest": {
     "preset": "ts-jest",
@@ -33,5 +34,8 @@
   "scripts": {
     "transpile": "tsc"
   },
-  "gitHead": "24d68d70a56717f2f4441cc9884a60f9fee0863e"
+  "gitHead": "24d68d70a56717f2f4441cc9884a60f9fee0863e",
+  "devDependencies": {
+    "@types/negotiator": "0.6.1"
+  }
 }
