--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -24,6 +24,10 @@ services:
       POSTGRES_USER: developer
       POSTGRES_PASSWORD: secret
       POSTGRES_DB: integration
+  redis:
+    image: redis:7.0.11
+    ports:
+      - '6379:6379'
   http-echo:
     image: ealen/echo-server:0.7.0
     ports: ['8888:80']
