--- a/package.json
+++ b/package.json
@@ -31,28 +31,33 @@
   "bin": {
     "toa": "runtime/runtime/bin/toa"
   },
+  "peerDependencies": {
+    "typescript": "^4.9.5"
+  },
   "devDependencies": {
-    "@babel/eslint-parser": "7.17.0",
     "@commitlint/cli": "14.1.0",
     "@commitlint/config-conventional": "14.1.0",
-    "@cucumber/cucumber": "9.0.0",
+    "@cucumber/cucumber": "9.1.2",
     "@types/jest": "28.1.1",
-    "@types/node": "18.0.0",
+    "@types/node": "20.3.1",
+    "@types/randomstring": "1.1.8",
     "clone-deep": "4.0.1",
+    "cucumber-tsflow": "4.0.6",
     "dotenv": "16.0.3",
+    "eslint-config-standard-with-typescript": "35.0.0",
     "execa": "5.1.1",
     "husky": "8.0.3",
     "jest": "29.5.0",
     "knex": "2.4.2",
-    "node-fetch": "2.6.7",
+    "node-fetch": "2.6.11",
     "randomstring": "1.2.3",
-    "snazzy": "9.0.0",
-    "standard": "17.0.0"
+    "ts-jest": "29.1.0",
+    "ts-node": "10.9.1"
   },
   "scripts": {
     "prepare": "npx husky install",
     "test": "npm run test:lint && npm run test:unit && npm run test:features:unit && npm run test:samples:unit",
-    "test:lint": "npx standard --verbose | npx snazzy",
+    "test:lint": "npx eslint .",
     "test:unit": "npx jest --roots runtime connectors extensions operations libraries features userland",
     "test:integration": "npx jest --roots integration --runInBand --testTimeout 180000",
     "test:features": "npx cucumber-js",
@@ -69,21 +74,12 @@
     "cluster": "chmod +x ./integration/scripts/cluster.sh && ./integration/scripts/cluster.sh",
     "buildx": "docker buildx create --name toa --use && docker buildx inspect --bootstrap",
     "setup": "docker compose up -d && npm run cluster && npm run buildx && npm run publish:local && npm ci && toa deploy ./integration/context",
-    "ci": "npm exec --workspaces -c \"rm -rf node_modules\" && npm i"
-  },
-  "standard": {
-    "parser": "@babel/eslint-parser",
-    "env": [
-      "jest"
-    ],
-    "globals": [
-      "AbortController"
-    ],
-    "ignore": [
-      "**/transpiled/"
-    ]
+    "ci": "npm exec --workspaces -c \"rm -rf node_modules\" && npm i",
+    "transpile": "npm run transpile --workspaces --if-present"
   },
   "jest": {
+    "preset": "ts-jest",
+    "testEnvironment": "node",
     "roots": [
       "<rootDir>/runtime",
       "<rootDir>/connectors",
@@ -95,7 +91,10 @@
       "<rootDir>/userland"
     ],
     "testMatch": [
-      "**/(*.)+(test).js"
+      "**/(*.)+(test).(js|ts)"
+    ],
+    "testPathIgnorePatterns": [
+      ".*/transpiled/"
     ],
     "bail": true
   }
