feat(stash): add DLM

--- a/features/steps/.workspace/components/collection/stash/manifest.toa.yaml
+++ b/features/steps/.workspace/components/collection/stash/manifest.toa.yaml
@@ -5,5 +5,10 @@ operations:
     input: string
   get:
     output: string
+  inc:
+    input: string
+    output: number
+  del:
+    input: string
 
 stash: ~
