--- a/extensions/stash/package.json
+++ b/extensions/stash/package.json
@@ -18,7 +18,8 @@
   },
   "dependencies": {
     "ioredis": "5.3.2",
-    "msgpackr": "1.9.5"
+    "msgpackr": "1.9.5",
+    "redlock": "5.0.0-beta.2"
   },
   "jest": {
     "preset": "ts-jest",
