test(features): add store/fetch

--- a/features/steps/.workspace/components/collection/stash/manifest.toa.yaml
+++ b/features/steps/.workspace/components/collection/stash/manifest.toa.yaml
@@ -10,5 +10,15 @@ operations:
     output: number
   del:
     input: string
+  store:
+    input:
+      oneOf:
+        - type: object
+        - type: array
+  fetch:
+    output:
+      oneOf:
+        - type: object
+        - type: array
 
 stash: ~
