--- a/extensions/stash/package.json
+++ b/extensions/stash/package.json
@@ -21,6 +21,10 @@
     "msgpackr": "1.9.5",
     "redlock": "5.0.0-beta.2"
   },
+  "scripts": {
+    "prepublishOnly": "npm run transpile",
+    "transpile": "tsc"
+  },
   "jest": {
     "preset": "ts-jest",
     "testEnvironment": "node"
