--- a/operations/package.json
+++ b/operations/package.json
@@ -22,6 +22,7 @@
     "access": "public"
   },
   "main": "src/index.js",
+  "types": "types/index.d.ts",
   "scripts": {
     "test": "echo \"Error: run tests from root\" && exit 1"
   },
