--- a/package.json
+++ b/package.json
@@ -59,12 +59,13 @@
     "test": "npm run test:lint && npm run test:unit && npm run test:features:unit && npm run test:samples:unit",
     "test:lint": "npx eslint .",
     "test:unit": "npx jest --roots runtime connectors extensions operations libraries features userland",
+    "test:stage": "npx jest --roots userland/example/stage --testPathIgnorePatterns .*/transpiled/",
     "test:integration": "npx jest --roots integration --runInBand --testTimeout 180000",
     "test:features": "npx cucumber-js",
     "test:features:unit": "npx cucumber-js -p norm",
     "test:samples:unit": "toa replay userland/example/components/*",
     "test:samples:all": "TOA_DEV=1 toa replay userland/example",
-    "test:all": "npm run ci && npm run test && npm run test:integration && npm run test:features",
+    "test:all": "npm run ci && npm run test && npm run test:integration && npm run test:stage && npm run test:features",
     "integration:deploy": "npm run publish:local && npx toa deploy ./integration/context",
     "lint": "npx standard --verbose --fix | npx snazzy",
     "npm:login:local": "npm adduser --registry http://localhost:4873 --auth-type=legacy",
@@ -94,7 +95,8 @@
       "**/(*.)+(test).(js|ts)"
     ],
     "testPathIgnorePatterns": [
-      ".*/transpiled/"
+      ".*/transpiled/",
+      "<rootDir>/userland/example/stage"
     ],
     "bail": true
   }
