fix(runtime): add `stash` dependency

--- a/features/steps/.workspace/context.toa.yaml
+++ b/features/steps/.workspace/context.toa.yaml
@@ -18,3 +18,5 @@ mongodb@docker: mongodb://host.docker.internal
 
 sql: pg://localhost
 sql@docker: pg://host.docker.internal
+
+stash@docker: redis://host.docker.internal
