feat(pointer): add intermediate commit

--- a/libraries/filesystem/package.json
+++ b/libraries/filesystem/package.json
@@ -22,11 +22,11 @@
     "access": "public"
   },
   "main": "source/index.js",
+  "types": "types/index.d.ts",
   "dependencies": {
     "@toa.io/generic": "0.20.0-dev.21",
     "fast-glob": "3.2.12",
-    "find-up": "5.0.0",
-    "fs-extra": "11.1.1"
+    "find-up": "5.0.0"
   },
   "gitHead": "24d68d70a56717f2f4441cc9884a60f9fee0863e"
 }
