--- a/libraries/pointer/package.json
+++ b/libraries/pointer/package.json
@@ -21,13 +21,18 @@
   "publishConfig": {
     "access": "public"
   },
-  "main": "source/index.js",
-  "types": "types/index.d.ts",
+  "main": "transpiled/index.js",
+  "types": "transpiled/index.d.ts",
   "dependencies": {
-    "@toa.io/console": "0.20.0-dev.21",
-    "@toa.io/generic": "0.20.0-dev.21",
-    "@toa.io/schemas": "0.20.0-dev.21",
-    "@toa.io/yaml": "0.20.0-dev.21"
+    "@toa.io/schemas": "0.20.0-dev.21"
+  },
+  "scripts": {
+    "prepublishOnly": "npm run transpile",
+    "transpile": "tsc"
+  },
+  "jest": {
+    "preset": "ts-jest",
+    "testEnvironment": "node"
   },
   "gitHead": "24d68d70a56717f2f4441cc9884a60f9fee0863e"
 }
