--- a/extensions/origins/package.json
+++ b/extensions/origins/package.json
@@ -4,7 +4,6 @@
   "description": "Toa Origins",
   "author": "temich <tema.gurtovoy@gmail.com>",
   "homepage": "https://github.com/toa-io/toa#readme",
-  "main": "source/index.js",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/toa-io/toa.git"
@@ -15,12 +14,12 @@
   "publishConfig": {
     "access": "public"
   },
-  "scripts": {
-    "test": "echo \"Error: run tests from root\" && exit 1"
-  },
+  "main": "transpiled/index.js",
+  "types": "transpiled/index.d.ts",
   "dependencies": {
     "@toa.io/core": "0.20.0-dev.21",
     "@toa.io/generic": "0.20.0-dev.21",
+    "@toa.io/pointer": "0.20.0-dev.21",
     "@toa.io/schemas": "0.20.0-dev.21",
     "@toa.io/yaml": "0.20.0-dev.21",
     "comq": "0.8.0",
@@ -28,6 +27,14 @@
   },
   "devDependencies": {
     "@types/node-fetch": "2.6.2"
+  },
+  "scripts": {
+    "prepublishOnly": "npm run transpile",
+    "transpile": "tsc"
+  },
+  "jest": {
+    "preset": "ts-jest",
+    "testEnvironment": "node"
   },
   "gitHead": "24d68d70a56717f2f4441cc9884a60f9fee0863e"
 }
