--- a/extensions/origins/tsconfig.json
+++ b/extensions/origins/tsconfig.json
@@ -1,7 +1,8 @@
 {
   "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "outDir": "./transpiled"
+    "outDir": "./transpiled",
+    "allowJs": true
   },
   "include": [
     "source"
