--- a/.eslintrc.yaml
+++ b/.eslintrc.yaml
@@ -43,6 +43,7 @@ overrides:
             - object
             - type
       max-params: error
+      arrow-parens: error
       '@typescript-eslint/consistent-type-imports':
         - error
         - fixStyle: inline-type-imports
