feat(stash): add return value of the routine

--- a/features/steps/.workspace/components/collection/stash/manifest.toa.yaml
+++ b/features/steps/.workspace/components/collection/stash/manifest.toa.yaml
@@ -20,5 +20,13 @@ operations:
       oneOf:
         - type: object
         - type: array
+  locks:
+    input:
+      delay: 0
+    output: [number]
+  plus:
+    input:
+      delay: 0
+    output: number
 
 stash: ~
