--- a/extensions/stash/package.json
+++ b/extensions/stash/package.json
@@ -19,7 +19,7 @@
   "dependencies": {
     "ioredis": "5.3.2",
     "msgpackr": "1.9.5",
-    "redlock": "5.0.0-beta.2"
+    "redlock-temp-fix": "5.0.0-beta.2"
   },
   "scripts": {
     "prepublishOnly": "npm run transpile",
