--- a/extensions/stash/package.json
+++ b/extensions/stash/package.json
@@ -28,5 +28,6 @@
   "jest": {
     "preset": "ts-jest",
     "testEnvironment": "node"
-  }
+  },
+  "gitHead": "594d7a02c777e0c39252ff3dd1beddd069d8081d"
 }
