--- a/libraries/console/package.json
+++ b/libraries/console/package.json
@@ -24,5 +24,6 @@
   "main": "source/index.js",
   "dependencies": {
     "chalk": "4.1.2"
-  }
+  },
+  "gitHead": "594d7a02c777e0c39252ff3dd1beddd069d8081d"
 }
