--- a/package.json
+++ b/package.json
@@ -66,12 +66,11 @@
     "test:samples:unit": "toa replay userland/example/components/*",
     "test:samples:all": "TOA_DEV=1 toa replay userland/example",
     "test:all": "npm run ci && npm run transpile && npm run test && npm run test:integration && npm run test:stage && npm run test:features",
-    "integration:deploy": "npm run publish:local && npx toa deploy ./integration/context",
     "lint": "npx standard --verbose --fix | npx snazzy",
     "npm:login:local": "npm adduser --registry http://localhost:4873 --auth-type=legacy",
     "version:dev": "npx lerna@6.5.1 version --conventional-prerelease --preid dev --no-commit-hooks --no-changelog --yes --no-git-tag-version",
-    "publish:local": "npm publish --workspaces --registry=http://localhost:4873",
-    "canary": "npx lerna@6.5.1 publish --canary --preid dev --no-commit-hooks --no-changelog --yes --message \"ci: prerelease\" --git-tag-command \"echo %s\" --sign-git-commit",
+    "publish:local": "npx lerna@6.5.1 publish from-package --force-publish --no-changelog --yes --no-git-tag-version --registry=http://localhost:4873",
+    "publish:canary": "npx lerna@6.5.1 publish --canary --conventional-prerelease --force-publish --preid dev --no-commit-hooks --no-changelog --yes --message \"ci: canary release\" --git-tag-command \"echo %s\" --sign-git-commit --registry=http://localhost:4873",
     "cluster": "chmod +x ./integration/scripts/cluster.sh && ./integration/scripts/cluster.sh",
     "buildx": "docker buildx create --name toa --use && docker buildx inspect --bootstrap",
     "setup": "docker compose up -d && npm run cluster && npm run buildx && npm run publish:local && npm ci && toa deploy ./integration/context",
