refactor(boot)!: remove `state` from predefined extensions

--- a/features/steps/.workspace/components/collection/state.set/manifest.toa.yaml
+++ b/features/steps/.workspace/components/collection/state.set/manifest.toa.yaml
@@ -3,6 +3,8 @@ namespace: state
 
 operations:
   set:
-    input: [ number ]
+    input: [number]
   get:
-    output: [ number ]
+    output: [number]
+
+state: ~
