chore: cleanup tests

--- a/extensions/origins/tsconfig.json
+++ b/extensions/origins/tsconfig.json
@@ -1,8 +1,7 @@
 {
   "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "outDir": "./transpiled",
-    "allowJs": true
+    "outDir": "./transpiled"
   },
   "include": [
     "source"
