--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
   },
   "scripts": {
     "prepare": "npx husky install",
-    "test": "npm run test:lint && npm run test:unit && npm run test:features:unit && npm run test:samples:unit",
+    "test": "npm run test:lint && npm run test:unit && npm run test:features:unit",
     "test:lint": "npx eslint .",
     "test:unit": "npx jest --roots runtime connectors extensions operations libraries features userland",
     "test:stage": "npx jest --roots userland/example/stage --testPathIgnorePatterns .*/transpiled/",
