test(features): add local npm registry to context

--- a/features/steps/.workspace/context.toa.yaml
+++ b/features/steps/.workspace/context.toa.yaml
@@ -2,6 +2,8 @@ name: collection
 version: 0.0.0
 packages: 'components/*'
 runtime:
+  registry: http://host.docker.internal:4873
+  proxy: http://host.docker.internal:4873
   registry@broken-runtime: no://where
   proxy@broken-runtime: no://where
 registry:
