--- a/extensions/stash/package.json
+++ b/extensions/stash/package.json
@@ -17,6 +17,7 @@
     "access": "public"
   },
   "dependencies": {
+    "@toa.io/pointer": "0.20.0-dev.33",
     "ioredis": "5.3.2",
     "msgpackr": "1.9.5",
     "redlock-temp-fix": "5.0.0-beta.2"
