--- a/package.json
+++ b/package.json
@@ -74,7 +74,7 @@
     "buildx": "docker buildx create --name toa --use && docker buildx inspect --bootstrap",
     "setup": "docker compose up -d && npm run cluster && npm run buildx && npm run publish:local && npm ci && toa deploy ./integration/context",
     "ci": "npm exec --workspaces -c \"rm -rf node_modules\" && npm i",
-    "retranspile": "npm exec --workspaces -c \"rm -rf transpiled && npm run transpile --if-present\""
+    "transpile": "npm exec --workspaces -c \"rm -rf transpiled\" && npx lerna@6.5.1 run transpile"
   },
   "jest": {
     "preset": "ts-jest",
