--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "husky": "8.0.3",
     "jest": "29.5.0",
     "knex": "2.4.2",
+    "mongodb": "5.7.0",
     "node-fetch": "2.6.11",
     "randomstring": "1.3.0",
     "ts-jest": "29.1.0",
