feat(extensions): add core exceptions mapping

--- a/extensions/exposition/features/steps/components/pots/manifest.toa.yaml
+++ b/extensions/exposition/features/steps/components/pots/manifest.toa.yaml
@@ -4,13 +4,14 @@ entity:
   schema:
     title: string
     volume: number
+    temperature?: number
 
 operations:
   transit:
     concurrency: none
     input:
-      title: ~
-      volume: ~
+      title*: ~
+      volume*: ~
 
 exposition:
   /:
