feat(exposition): add query by id

--- a/extensions/exposition/features/steps/components/pots/manifest.toa.yaml
+++ b/extensions/exposition/features/steps/components/pots/manifest.toa.yaml
@@ -12,8 +12,15 @@ operations:
     input:
       title*: ~
       volume*: ~
+  observe:
+    output:
+      id: string
+      title: string
+      volume: number
 
 exposition:
   /:
     POST: transit
+    GET: enumerate
+  /pot:
     GET: observe
