fix(origins): fix origins override

--- a/features/steps/.workspace/components/collection/origins.http/manifest.toa.yaml
+++ b/features/steps/.workspace/components/collection/origins.http/manifest.toa.yaml
@@ -6,7 +6,10 @@ operations:
     output: object
   bad:
     output: object
+  def:
+    output: object
 
 origins:
   echo: http://localhost:8888/some/
   bad: ~
+  default: http://api.example.com
