--- a/extensions/exposition/package.json
+++ b/extensions/exposition/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@toa.io/core": "0.20.0-dev.36",
     "@toa.io/generic": "0.20.0-dev.36",
+    "@toa.io/http": "0.20.0-dev.18",
     "@types/cors": "2.8.13",
     "@types/express": "4.17.17",
     "cors": "2.8.5",
