--- a/extensions/exposition/package.json
+++ b/extensions/exposition/package.json
@@ -20,8 +20,6 @@
     "@toa.io/core": "0.20.0-dev.36",
     "@toa.io/generic": "0.20.0-dev.36",
     "@toa.io/http": "0.20.0-dev.18",
-    "@types/cors": "2.8.13",
-    "@types/express": "4.17.17",
     "cors": "2.8.5",
     "express": "4.18.2",
     "js-yaml": "4.1.0",
@@ -36,8 +34,9 @@
     "transpile": "tsc"
   },
   "devDependencies": {
-    "@types/negotiator": "0.6.1",
-    "qs": "6.11.2"
+    "@types/cors": "2.8.13",
+    "@types/express": "4.17.17",
+    "@types/negotiator": "0.6.1"
   },
   "gitHead": "24d68d70a56717f2f4441cc9884a60f9fee0863e"
 }
