--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "execa": "5.1.1",
     "husky": "8.0.3",
     "jest": "29.5.0",
+    "jest-diff": "29.6.2",
     "knex": "2.4.2",
     "mongodb": "5.7.0",
     "node-fetch": "2.6.11",
