feat(exposition): add query sort

--- a/extensions/exposition/features/steps/components/pots/manifest.toa.yaml
+++ b/extensions/exposition/features/steps/components/pots/manifest.toa.yaml
@@ -31,3 +31,9 @@ exposition:
       endpoint: enumerate
       query:
         criteria: volume>200
+  /hottest2:
+    GET:
+      endpoint: enumerate
+      query:
+        sort: temperature:desc
+        limit: 2
