feat(exposition): add dynamic conflicts resolution

--- a/extensions/exposition/package.json
+++ b/extensions/exposition/package.json
@@ -31,6 +31,7 @@
     "testEnvironment": "node"
   },
   "scripts": {
+    "test:features": "npx cucumber-js",
     "transpile": "tsc"
   },
   "devDependencies": {
