feat(exposition): add annotation resolution

--- a/extensions/exposition/schemas/method.cos.yaml
+++ b/extensions/exposition/schemas/method.cos.yaml
@@ -1,5 +1,7 @@
 verb: /^(GET|POST|PUT|PATCH|DELETE)$/
 mapping:
+  namespace?: string
+  component?: string
   endpoint: string
   query?:
     $ref: query
