feat(exposition): add directives

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,8 @@
     "strict": true,
     "experimentalDecorators": true,
     "noImplicitOverride": true,
-    "allowJs": true
+    "allowJs": true,
+    "forceConsistentCasingInFileNames": true
   },
   "exclude": [
     "**/transpiled"
