--- a/.eslintrc.yaml
+++ b/.eslintrc.yaml
@@ -50,6 +50,7 @@ overrides:
         - fixStyle: inline-type-imports
       '@typescript-eslint/member-ordering': error
       '@typescript-eslint/explicit-member-accessibility': error
+      '@typescript-eslint/indent': off
 parserOptions:
   project: ./tsconfig.json
 env:
