feat(exposition): add `auth:anonymous` directive

--- a/extensions/exposition/components/identity.basic/manifest.toa.yaml
+++ b/extensions/exposition/components/identity.basic/manifest.toa.yaml
@@ -12,7 +12,7 @@ operations:
     input:
       username: string
       password: string
-  resolve:
+  authenticate:
     input: string
     output:
       id: string
