--- a/extensions/exposition/package.json
+++ b/extensions/exposition/package.json
@@ -26,7 +26,8 @@
     "express": "4.18.2",
     "js-yaml": "4.1.0",
     "msgpackr": "1.9.5",
-    "negotiator": "0.6.3"
+    "negotiator": "0.6.3",
+    "paseto": "3.1.4"
   },
   "jest": {
     "preset": "ts-jest",
@@ -34,7 +35,7 @@
   },
   "scripts": {
     "install": "npm run transpile",
-    "transpile": "npx tsc & npx tsc -p ./components/identity.basic",
+    "transpile": "npx tsc && npx tsc -p ./components/identity.basic && npx tsc -p ./components/identity.tokens",
     "test:features": "npx cucumber-js"
   },
   "devDependencies": {
