feat(exposition): add token authentication scheme

--- a/extensions/exposition/components/identity.tokens/manifest.toa.yaml
+++ b/extensions/exposition/components/identity.tokens/manifest.toa.yaml
@@ -3,13 +3,13 @@ name: tokens
 
 operations:
   encode:
-    input: object
+    input:
+      id*: id
+      ...: true
     output: string
   decode:
     input: string
-    output:
-      identity: object
-      refresh: string
+    output: object
   authenticate:
     forward: decode
 
