feat(exposition): add primary authentication scheme

--- a/extensions/exposition/components/identity.basic/manifest.toa.yaml
+++ b/extensions/exposition/components/identity.basic/manifest.toa.yaml
@@ -15,7 +15,7 @@ operations:
   authenticate:
     input: string
     output:
-      id: string
+      identity: object
 
 configuration:
   rounds: 10
