--- a/runtime/cli/package.json
+++ b/runtime/cli/package.json
@@ -29,6 +29,7 @@
     "@toa.io/yaml": "0.20.0-dev.36",
     "dotenv": "16.1.1",
     "find-up": "5.0.0",
+    "paseto": "3.1.4",
     "yargs": "17.6.2"
   },
   "gitHead": "61c8e74a336385265767e9fd37d49128cb51b17f"
