--- a/extensions/exposition/components/identity.tokens/manifest.toa.yaml
+++ b/extensions/exposition/components/identity.tokens/manifest.toa.yaml
@@ -13,6 +13,7 @@ operations:
       payload: object
       iat: string
       exp: string
+      refresh: boolean
   authenticate:
     input: string
     output:
